fazendo carinho na pagina

--- a/_data/testimony.yml
+++ b/_data/testimony.yml
@@ -2,7 +2,7 @@ items:
   - body: Professora do curso de Engenharia de Software da UnB e coordenadora do laboratório de pesquisa LabLivre
     author: Carla Rocha
     photo: _images/testimony/carla.png
-  - body: Graduado em Engenharia de Software pela UnB e finalizando o doutorado em ESW IME-USP
+  - body: Doutorando em Engenharia de Software na USP e Engenheiro de Software pela UnB
     author: Isaque Alves
     photo: _images/testimony/isaque.jpg
   - body: Graduado em Engenharia de Software pela UnB e finalizando o mestrado em ESW na UnB
